--- a/hw_js_13/package.json
+++ b/hw_js_13/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "core-js": "^3.3.4",
-    "handlebars": "^4.5.3"
+    "handlebars": "^4.5.3",
+    "pnotify": "^4.0.0"
   }
 }
